--- a/war/test.html
+++ b/war/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Rivendell City</title>
+<title>Rivendell</title>
 <script src="jquery-2.1.0.min.js"></script>
 </head>
 <body>
