--- a/war/index.html
+++ b/war/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Greenify</title>
+		<title>Rivendell</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -41,8 +41,8 @@
 		<!-- Banner -->
 			<section id="banner">
 			<div id ="banner">
-				<h2>Greenify</h2>
-				<p>An initiative to make Mumbai green</p>
+				<h2>Rivendell</h2>
+				<p>An initiative to make Mumbai like Rivendell</p>
 				<ul class="actions">
 					<li><a href="../RivendellCity/signUp.html" class="button special">Sign Up</a></li>
 				</ul>
