--- a/war/messages.html
+++ b/war/messages.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="description" content="description of your site">
     <meta name="author" content="author of the site">
-    <title>Rivendell</title>
+    <title>Rivendell - New Event</title>
 	<link rel="icon" type="image/png" href="./img/favicon.jpg">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.css">
@@ -21,7 +21,7 @@
             <ul class="pull-right">
               <li style="font-size:20px"><a href="index.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a></li>
             </ul>
-              <h1 class="namePlate" style="color:green"><strong>Rivendell</strong></h1></a>
+              <h1 class="namePlate" style="color:green"><strong>New Event</strong></h1></a>
           </div>
         </div>
       </div>
@@ -40,39 +40,36 @@
           </div>
         </div>
       </div>
-	  <br>
-	<br>
     </div>
     <div class="page">
       <div class="page-container">
 <div class="container">
   <div class="row">
-    <div class="span12">
-      <h4 class="header"><b>Welcome</b></h4>
+    <div class="span12 header">
     </div>
+	<div>
+    <div class="span6">
+		<div class="control-group">
+			<div class="control">
+				<h2 style="color:green"><b>Requests For You</b></h2>
+			</div>
+			<div class="control">
+				<label class="control-label">User $(user.name) has sent you a request for your car pool on $(pool.date) from $(pool.origin) to $(pool.dest). Accept?</label>
+				<button class="btn btn-success btn-large pull-center">Yes</button>
+				<button class="btn btn-danger btn-large pull-center">No</button>
+			</div>
+		</div>
+    </div>
+	<div class="span6">
+		<div class="control-group">
+			<div class="control">
+				<h2 style="color:green"><b>Confirmations</b></h2>
+			</div>
+			<div class="control">
+				<label class="control-label">User $(user.name) has confirmed for your car pool on $(pool.date) from $(pool.origin) to $(pool.dest).</label>
+			</div>
+		</div>
 	</div>
-	<div class="row">
-    <div class="span3">
-      <div class="profile-sidebar">
-        <!-- <h4>Your Green Points</h4>
-        <p class="pull-center"><b>$(user.score)</b></p> -->
-      </div>
-    </div>
-    <div class="span9">
-        <div class="row-fluid">
-          <div class="span6">
-            <a type="button" class="btn btn-success btn-large" href="newCarPool.html">Initiate a car pool</a>
-          </div>
-          <div class="span6">
-		  <a type="button" class="btn btn-danger btn-large" href="newEvent.html">Create a new event</a>
-          </div>
-          <!-- <div class="span3">
-		  <a type="button" class="btn btn-primary btn-large" href="newDeed.html">Add a new deed</a>
-          </div> -->
-		  </div>
-        </div>
-      
-    </div>
 	</div>
   </div>
 </div>
@@ -89,4 +86,5 @@
       </div>
     </footer>
   </body>
+  <script src="jquery-2.1.0.min.js"></script>
 </html>
