--- a/war/newCarPool.html
+++ b/war/newCarPool.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="description" content="description of your site">
     <meta name="author" content="author of the site">
-    <title>Greenify Mumbai - New Car Pool</title>
+    <title>Rivendell - New Car Pool</title>
 	<link rel="icon" type="image/png" href="./img/favicon.jpg">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.css">
@@ -18,7 +18,7 @@
         <div class="row">
           <div class="span12">
             <ul class="pull-right">
-              <li style="font-size:20px"><a href="../html5up-alpha/index.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a></li>
+              <li style="font-size:20px"><a href="index.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a></li>
             </ul>
               <h1 class="namePlate" style="color:green"><strong>New Car Pool</strong></h1></a>
           </div>
@@ -31,8 +31,8 @@
           <div class="span12">
             <ul>
               <li><a href="profile.html"><i class="batch home"></i><br>Profile</a></li>
-              <li><span class="label label-important pull-right">08</span><a href="events.html"><i class="batch stream"></i><br>Events</a></li>
-              <!-- <li><span class="label label-important pull-right">04</span><a href="messages.html"><i class="batch plane"></i><br>Messages</a></li> -->
+              <li><span class="label label-important pull-right"></span><a href="events.html"><i class="batch stream"></i><br>Events</a></li>
+              <li><span class="label label-important pull-right"></span><a href="messages.html"><i class="batch plane"></i><br>Messages</a></li>
               <li><a href="carPoolJoin.html"><i class="batch forms"></i><br>Join a car pool</a></li>
               <!-- <li><a href="users.html"><i class="batch users"></i><br>Users</a></li> -->
             </ul>
