--- a/war/publish.html
+++ b/war/publish.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="description" content="description of your site">
     <meta name="author" content="author of the site">
-    <title>Greenify Mumbai - New Event</title>
+    <title>RIvendell</title>
 	<link rel="icon" type="image/png" href="./img/favicon.jpg">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.css">
@@ -27,7 +27,7 @@
         <div class="row">
           <div class="span12">
             <ul class="pull-right">
-              <li style="font-size:20px"><a href="../html5up-alpha/index.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a></li>
+              <li style="font-size:20px"><a href="index.html"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a></li>
             </ul>
               <h1 class="namePlate" style="color:green"><strong>New Deed</strong></h1></a>
           </div>
